--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "canvas": "^3.1.0",
+    "chartjs-node-canvas": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
+    "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "jest": "^29.7.0",
@@ -22,6 +25,7 @@
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
+    "pdfkit": "^0.17.1",
     "xlsx": "^0.18.5"
   }
 }
