--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
     "pdfkit": "^0.17.1",
+    "puppeteer": "^24.10.0",
     "xlsx": "^0.18.5"
   }
 }
